# tui-commander

./: .gitlint  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  flake-update.yml
examples/: simple.rs
nix/: treefmt.nix
src/: command.rs  commander.rs  context.rs  lib.rs  ui.rs  view.rs
