[package]
name = "tui-commander"
version = "0.1.1"
edition = "2021"

authors = [ "Matthias Beyer <mail@beyermatthias.de>" ]
description = "ratatui widget for command prompt (like rofi)"
license = "MPL-2.0"
repository = "https://github.com/matthiasbeyer/tui-commander"

keywords = [ "tui", "ratatui" ]


[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
downcast-rs = "2.0.1"
nucleo-matcher = "0.3.1"
ratatui = "0.29.0"
thiserror = "2.0.11"
tui-input = "0.11.1"

[dev-dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm"] }
static_assertions = "1.1.0"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
