[package]
name = "tui-commander"
version = "0.2.0"
edition = "2021"

authors = [ "Matthias Beyer <mail@beyermatthias.de>" ]
description = "ratatui widget for command prompt (like rofi)"
license = "MPL-2.0"
repository = "https://github.com/matthiasbeyer/tui-commander"

keywords = [ "tui", "ratatui" ]


[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
downcast-rs = "2.0.2"
nucleo-matcher = "0.3.1"
ratatui = { version = "0.29.0", features = ["crossterm"] }
thiserror = "2.0.17"
tui-input = "0.14.0"

[dev-dependencies]
clap = { version = "4.5.48", features = ["derive"] }
color-eyre = "0.6.5"
futures = "0.3.31"
ratatui = { version = "0.29.0", features = ["crossterm"] }
static_assertions = "1.1.0"
tokio = { version = "1.48.0", features = ["rt", "macros"] }
